--- a/app/src/main/res/layout-sw600dp/layout_recipe_details_activity.xml
+++ b/app/src/main/res/layout-sw600dp/layout_recipe_details_activity.xml
@@ -5,15 +5,18 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:baselineAligned="false">
-    <fragment
+    <FrameLayout
         android:id="@+id/recipeStepsContainer"
-        android:layout_width="250dp"
-        android:layout_height="match_parent"/>
+        android:layout_width="0dp"
+        android:background="@android:color/darker_gray"
+        android:layout_weight="1.5"
+        android:layout_height="match_parent"
+         />
 
-    <fragment
+    <FrameLayout
         android:id="@+id/recipeStepDetailContainer"
         android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2.3"
         android:layout_height="match_parent"/>
 
 
