--- a/app/src/main/res/layout/layout_recipe_details_activity.xml
+++ b/app/src/main/res/layout/layout_recipe_details_activity.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout tools:context=".ui.activities.RecipeDetailsActivity"
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <fragment
+    <FrameLayout
         android:layout_width="match_parent"
         android:id="@+id/recipeStepsContainer"
         android:layout_height="match_parent"/>
