--- a/app/src/main/res/layout-sw600dp-land/fragment_recipe_step_details.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_recipe_step_details.xml
@@ -14,17 +14,23 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exoPlayerView" />
+        app:layout_constraintTop_toBottomOf="@+id/exoPlayerView"
+        app:layout_constraintVertical_weight="1" />
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/exoPlayerView"
         android:layout_width="0dp"
-        android:layout_height="250dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/stepDescription"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_weight="1.5">
 
     </com.google.android.exoplayer2.ui.PlayerView>
 
